[DW-874] Fix to styling
- Table overflowing
- Emphas boxes overflowing

--- a/repository-data/webfiles/src/main/resources/site/scss/components/_emphasis-box.scss
+++ b/repository-data/webfiles/src/main/resources/site/scss/components/_emphasis-box.scss
@@ -56,6 +56,7 @@
     &-emphasis {
         border-left-color: #4c90ce;
         background-color: #d4e4f3;
+        overflow-y: auto;
 
         svg, path {
             fill: $nhs-blue;
